# x_health

./: Makefile  README.md  pyproject.toml  requirements - Copia.txt  requirements.txt
data/processed/: default_predicao.json
data/raw/: input_dados_random.json
docs/: mkdocs.yml
docs/docs/: index.md
models/: modelo_xgboost.pkl
notebooks/: 01-analise_exploratoria.ipynb  02-xgboost.ipynb  03-funcao_predicao.ipynb  analise_exploratoria.ipynb  consolida_base.ipynb  eda.ipynb  modelagem.ipynb
src/: auxiliar_xhealth.py  config.py  eda.py  globals.py  models.py  plots.py
x_health/: __init__.py  dataset.py  eda_utils.py  features.py  plots.py  xgboost_utils.py
x_health/modeling/: predict.py  train.py
