[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "x_health"
version = "0.0.1"
description = "Projeto contendo An\u00e1lise explorat\u00f3ria de dados e modelo para o problema do X-Health"
authors = [
  { name = "Natalia de Faria (natfaria@gmail.com)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["x_health"]
force_sort_within_sections = true
